Step 2: get all the emails
Finally got the frontend to authenticate and grab users emails!

The backend is still not utilised for anything.

--- a/assets/.env
+++ b/assets/.env
@@ -1,1 +1,2 @@
-GOOGLE_CLIENT_ID_WEB=750411337406-mq8gph17m7djdae4omvedgpqisd8tgnr.apps.googleusercontent.com
+GOOGLE_CLIENT_ID=750411337406-mq8gph17m7djdae4omvedgpqisd8tgnr.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
