--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   google_sign_in: ^6.2.1
   google_sign_in_web: ^0.12.4+1
   flutter_dotenv: ^5.0.2
+  googleapis: ^7.0.0
+  googleapis_auth: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
