--- a/assets/.env
+++ b/assets/.env
@@ -1,2 +1,3 @@
 GOOGLE_CLIENT_ID=750411337406-mq8gph17m7djdae4omvedgpqisd8tgnr.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
+ELEVENLABS_API_KEY=
