--- a/firebase.json
+++ b/firebase.json
@@ -47,5 +47,45 @@
     "functions": {
       "port": 5001
     }
+  },
+  "hosting": {
+    "public": "build/web",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
+    "rewrites": [
+      {
+        "source": "**",
+        "destination": "/index.html",
+        "dynamic": true,
+        "exclude": ["/assets/audio/**"]
+      }
+    ],
+    "mimeTypes": {
+      "audio/mpeg": [
+        "mp3"
+      ]
+    },
+    "headers": [
+      {
+        "source": "**",
+        "headers": [
+          {
+            "key": "Access-Control-Allow-Origin",
+            "value": "*"
+          },
+          {
+            "key": "Access-Control-Allow-Methods",
+            "value": "GET, POST, PUT, DELETE, OPTIONS"
+          },
+          {
+            "key": "Access-Control-Allow-Headers",
+            "value": "Origin, X-Requested-With, Content-Type, Accept"
+          }
+        ]
+      }
+    ]
   }
 }
