--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,16 +29,35 @@ dependencies:
   cupertino_icons: ^1.0.6
   html: ^0.15.0
   audioplayers: ^6.0.0
+  http: ^1.2.1
+  dropdown_search: ^5.0.2
+  timeline_tile: ^2.0.0
+  path_provider: ^2.0.15
+  flutter_spinkit: ^5.1.0
+  animations: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.2
+  shimmer: ^2.0.0
+  flutter_speed_dial: ^6.2.0
+  flutter_riverpod: ^2.3.6
+  riverpod_annotation: ^2.1.1
+  url_launcher: ^6.2.5
+  just_audio: ^0.9.34
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
+  riverpod_generator: ^2.2.3
+  build_runner: ^2.4.6
 
 flutter:
   assets:
     - assets/.env
     - assets/audio/Josephv2.mp3
+    - assets/audio/buildspace_w1.mp3
+    - assets/audio/buildspace_w2.mp3
+    - assets/audio/buildspace_w3.mp3
+    - assets/audio/default.mp3
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
