--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   riverpod_annotation: ^2.1.1
   url_launcher: ^6.2.5
   just_audio: ^0.9.34
+  m3_carousel: ^1.0.0
 
 dev_dependencies:
   flutter_test:
