--- a/firebase.json
+++ b/firebase.json
@@ -1,30 +1,11 @@
 {
   "flutter": {
     "platforms": {
-      "ios": {
-        "default": {
-          "projectId": "otron-email-426615",
-          "appId": "1:750411337406:ios:b50b57ae12343ce35198ef",
-          "uploadDebugSymbols": false,
-          "fileOutput": "ios/Runner/GoogleService-Info.plist"
-        }
-      },
-      "macos": {
-        "default": {
-          "projectId": "otron-email-426615",
-          "appId": "1:750411337406:ios:b50b57ae12343ce35198ef",
-          "uploadDebugSymbols": false,
-          "fileOutput": "macos/Runner/GoogleService-Info.plist"
-        }
-      },
       "dart": {
         "lib/firebase_options.dart": {
           "projectId": "otron-email-426615",
           "configurations": {
-            "ios": "1:750411337406:ios:b50b57ae12343ce35198ef",
-            "macos": "1:750411337406:ios:b50b57ae12343ce35198ef",
-            "web": "1:750411337406:web:fcdcbfc80b617e985198ef",
-            "windows": "1:750411337406:web:955158aa5a51f1745198ef"
+            "web": "1:750411337406:web:fcdcbfc80b617e985198ef"
           }
         }
       }
@@ -46,7 +27,17 @@
   "emulators": {
     "functions": {
       "port": 5001
-    }
+    },
+    "firestore": {
+      "port": 8080
+    },
+    "hosting": {
+      "port": 5000
+    },
+    "ui": {
+      "enabled": true
+    },
+    "singleProjectMode": true
   },
   "hosting": {
     "public": "build/web",
@@ -60,7 +51,9 @@
         "source": "**",
         "destination": "/index.html",
         "dynamic": true,
-        "exclude": ["/assets/audio/**"]
+        "exclude": [
+          "/assets/audio/**"
+        ]
       }
     ],
     "mimeTypes": {
