--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>750411337406-pmhdp74ncaceu3qi3cgl7jq3joark42v.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.750411337406-pmhdp74ncaceu3qi3cgl7jq3joark42v</string>
 	<key>API_KEY</key>
 	<string>AIzaSyBsQmyE_g1e9chnimBrlmXmYHVGYLx48a4</string>
 	<key>GCM_SENDER_ID</key>
