--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,3 @@
-
 name: home
 description: "A new Flutter project."
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
@@ -35,13 +34,15 @@ dependencies:
   flutter_speed_dial: ^6.2.0
   flutter_riverpod: ^2.3.6
   riverpod_annotation: ^2.1.1
-  url_launcher: ^6.2.5
+  url_launcher: ^6.3.0  # Use the latest version available
   just_audio: ^0.9.34
   m3_carousel: ^1.0.0
   firebase_vertexai: ^0.1.1
   firebase_core: ^2.25.4
   cloud_firestore: ^4.15.4
   intl: ^0.18.0
+  webview_flutter: ^4.4.2  # Use the latest version available
+  js: ^0.6.3  # Add this line if it's not already present
 
 dev_dependencies:
   flutter_test:
@@ -53,6 +54,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/.env
+    - assets/audio/
     - assets/audio/Josephv2.mp3
     - assets/audio/buildspace_w1.mp3
     - assets/audio/buildspace_w2.mp3
