Updated the "example" Your created podcasts with more diversity

--- a/assets/.env
+++ b/assets/.env
@@ -1,3 +1,3 @@
 GOOGLE_CLIENT_ID=750411337406-mq8gph17m7djdae4omvedgpqisd8tgnr.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=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
-ELEVENLABS_API_KEY=
+FIREBASE_FUNCTIONS_BASE_URL=https://proxy-image-2ghwz42v7q-uc.a.run.app
