--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   dio: ^5.0.0
   file_picker: ^5.0.0
   crypto: ^3.0.2
+  permission_handler: ^10.0.0
+
 
 dev_dependencies:
   flutter_test:
